# object-patterns-in-c-sandbox

./: .gitmodules  CMakeLists.txt  README.dev.md  README.md
assets/: CMakeLists.txt
assets/fonts/: CMakeLists.txt  README.md
assets/images/: CMakeLists.txt  duck.aseprite  duck.json  tiles.aseprite
assets/sounds/: CMakeLists.txt
assets/tilemaps/: CMakeLists.txt  level1.idx
include/mbm/: _wheel.h  background.h  balloon.h  barrel.h  caption_fps.h  caption_paused.h  dims.h  duck.h  fpscounter.h  game.h  ground.h  moon.h  scene.h  spritesheet.h  tiles.h  timing.h  timings.h  turret.h  world.h
src/app/: CMakeLists.txt  appstate.h  main.c
src/mbm/: CMakeLists.txt  _wheel.c  animations.c  animations.h  background.c  balloon.c  barrel.c  caption_fps.c  caption_paused.c  duck.c  fpscounter.c  game.c  ground.c  moon.c  scene.c  spritesheet.c  tiles.c  timings.c  turret.c  wheel.c  world.c
test/mbm/: CMakeLists.txt  test_balloon.c  test_spritesheet.c
